fix: fixed broken styles in the Card widget when subtitle are displayed

--- a/src/components/UI/Card/CardHeading.module.css
+++ b/src/components/UI/Card/CardHeading.module.css
@@ -4,7 +4,8 @@
   max-height: 4rem;
   height: 4rem;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .heading__title {
